tests/ui/rfcs/rfc-2632-const-trait-impl/cross-crate.gatednc.stderr
error[E0277]: the trait bound `cross_crate::MyTrait::{synthetic#0}: ~const Compat` is not satisfied
  --> $DIR/cross-crate.rs:19:14
   |
LL |     NonConst.func();
   |              ^^^^ the trait `~const Compat` is not implemented for `cross_crate::MyTrait::{synthetic#0}`
   |
note: required by a bound in `func`
  --> $DIR/auxiliary/cross-crate.rs:5:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `MyTrait::func`
...
LL |     fn func(self);
   |        ---- required by a bound in this associated function

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
